Fixed image container wrap.

--- a/css/home.css
+++ b/css/home.css
@@ -97,10 +97,10 @@
 }
 
 .hero-img-box {
-  /* height: 100%; */
+  height: 100%;
   background-color: red;
   justify-self: center;
-  min-width: 100%;
+  /* min-width: 100%; */
   max-height: 20rem;
   overflow: hidden;
 }
